--- a/src/Component/TODOLIST/TodoApp.css
+++ b/src/Component/TODOLIST/TodoApp.css
@@ -1,11 +1,12 @@
+
 h1{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 30px;
+  font-size: 2.4rem;
   
   color: #fff;
-  font-size: 24px;
 }
 
 .complete {
@@ -26,6 +27,8 @@ h1{
   width: 320px;
   background: transparent;
   color: #fff;
+  font-size: 1.1rem;
+
 }
 
 .todo-input::placeholder {
@@ -42,6 +45,8 @@ h1{
   color: rgb(1, 1, 1);
   font-weight: 700;
   text-transform: capitalize;
+  font-size: 1.1rem;
+
 }
 
 
